# waveshare_epaper

./: README.md  pyproject.toml  start.py
epd/: __init__.py  epd4in2_V2.py  epdconfig.py
